--- a/index.html
+++ b/index.html
@@ -1,6 +1,88 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Notifikasi Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .notification-bar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #ffcc00;
+      color: #333;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+      z-index: 1000;
+    }
+    .notification-bar p {
+      margin: 0;
+      font-size: 16px;
+      font-weight: bold;
+    }
+    .notification-bar button {
+      background-color: transparent;
+      border: none;
+      color: #333;
+      font-size: 20px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+    .notification-bar button:hover {
+      color: red;
+    }
+    .content {
+      margin-top: 60px; /* Memberikan ruang di bawah notifikasi */
+      padding: 20px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Notifikasi -->
+  <div class="notification-bar" id="notification">
+    <p>V2 AKAN SEGERA HADIR, BUTUH PROSES LAMA KARNA DEVOLOPER NYA CUMA 1</p>
+    <button onclick="closeNotification()">×</button>
+  </div>
+
+  <!-- Konten Halaman -->
+  <div class="content">
+    <h1>     </h1>
+    <p>     </p>
+  </div>
+
+  <script>
+    function closeNotification() {
+      const notification = document.getElementById('notification');
+      notification.style.display = 'none';
+    }
+  </script>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+<!MainMenu>
+<html lang="id">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSS TikTok Downloader</title>
