--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <!-- Notifikasi -->
   <div class="notification-bar" id="notification">
-    <p>V2 AKAN SEGERA HADIR, BUTUH PROSES LAMA KARNA DEVOLOPER NYA CUMA 1</p>
+    <p>💬(Sayen) Masih teaster belum support tiktok foto! </p>
     <button onclick="closeNotification()">×</button>
   </div>
 
